syntax = "proto3";

option go_package = "github.com/multycloud/multy/api/proto/resources";
option java_multiple_files = true;
option java_package = "dev.multy.api.resources";
option java_outer_classname = "ResourcesProto";

import "api/proto/common/common.proto";

package dev.multy.resources;

message CreateKubernetesClusterRequest {
  repeated CloudSpecificKubernetesClusterArgs resources = 1;
}

message ReadKubernetesClusterRequest {
  string resource_id = 1;
}

message UpdateKubernetesClusterRequest {
  string resource_id = 1;
  repeated CloudSpecificKubernetesClusterArgs resources = 2;
}

message DeleteKubernetesClusterRequest {
  string resource_id = 1;
}

message CloudSpecificKubernetesClusterArgs {
  common.CloudSpecificResourceCommonArgs common_parameters = 1;
  string name = 2;
  repeated string subnet_ids = 3;
}

message CloudSpecificKubernetesClusterResource {
  common.CloudSpecificCommonResourceParameters common_parameters = 1;
  string name = 2;
  repeated string subnet_ids = 3;

  // outputs
  string endpoint = 4;
}

message KubernetesClusterResource {
  common.CommonResourceParameters common_parameters = 1;
  repeated CloudSpecificKubernetesClusterResource resources = 2;
}
